[gd_scene load_steps=4 format=3 uid="uid://by46sq0s0jcgy"]

[ext_resource type="Script" path="res://Scripts/Kris/Attack.gd" id="1_s3tgw"]
[ext_resource type="Texture2D" uid="uid://cjkfmcla1hexe" path="res://Assets/Sprites/UserInterface/Arrow.png" id="2_4stxd"]
[ext_resource type="Texture2D" uid="uid://b38i2fdkb757q" path="res://Assets/Sprites/UserInterface/Circle.png" id="3_3t31f"]

[node name="RegularAttack" type="Node2D"]
visible = false
position = Vector2(0, 86)
script = ExtResource("1_s3tgw")
keysToBePressed = Array[int]([4194320, 4194321, 4194322])

[node name="Arrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(175, -180)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_4stxd")

[node name="Circle" type="Sprite2D" parent="Arrow"]
scale = Vector2(2, 2)
texture = ExtResource("3_3t31f")

[node name="Arrow2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(292, -87)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_4stxd")

[node name="Circle" type="Sprite2D" parent="Arrow2"]
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("3_3t31f")

[node name="Arrow3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(175, 8)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_4stxd")

[node name="Circle" type="Sprite2D" parent="Arrow3"]
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("3_3t31f")

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="DecreaseTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="ButtonTimer" to="." method="_on_button_timeout"]
[connection signal="timeout" from="DecreaseTimer" to="." method="_on_decrease_timer_timeout"]
